<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.LoginScreen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_name" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:ems="10"
            android:hint="@string/name_text_input"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_email" />

        <EditText
            android:id="@+id/emailTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:ems="10"
            android:hint="@string/email_text_input"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_categories" />


        <RadioGroup
            android:id="@+id/personCategoriesGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin">

            <RadioButton
                android:id="@+id/userRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/user_radio_button" />

            <RadioButton
                android:id="@+id/organizerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organizer_radio_button" />

            <RadioButton
                android:id="@+id/adminRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_radio_button" />
        </RadioGroup>

        <Button
            android:id="@+id/inviteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/login_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>