<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context=".Event.EventEditor">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_subject" />

            <EditText
                android:id="@+id/subjectEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_subject_hint"
                android:inputType="textPersonName"
                android:textColorHint="#757575" />

            <CheckBox
                android:id="@+id/isInviteOnlyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invite Only" />

            <TextView
                android:id="@+id/buildingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Building" />

            <Spinner
                android:id="@+id/buildingSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:paddingHorizontal="5dp" />

            <TextView
                android:id="@+id/roomTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Room" />

            <EditText
                android:id="@+id/roomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/event_location_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/event_editor_date_edit_text"
                android:inputType="date" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_time" />

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/event_editor_time_edit_text"
                android:inputType="time" />

            <TextView
                android:id="@+id/eventDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description" />

            <EditText
                android:id="@+id/infoEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/event_info_hint"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:scrollbars="vertical"
                android:scrollHorizontally="false" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/eventDiscardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/event_delete_button"
            android:textSize="16sp" />

        <Button
            android:id="@+id/eventSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/event_save_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>